favicon added and input overflow fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -169,6 +169,9 @@ thead {
 .menubox img{
   box-shadow: 0 0 1px 1px rgba(0,0,0,0.5);
 }
+#editor{
+  overflow-y:scroll;
+}
 footer{
   background-color: #1F1F1F;
   border-top: solid 5px #537368;
